# MaterialAI-Workbench-QA

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: abaqus-real.yml  qa.yml  source-mock.yml
config/: environments.example.toml
contracts/: README.md  acceptance_manifest.schema.json  diagnostics.schema.json
docs/: RUNBOOK_CN.md  TEST_MATRIX_CN.md
fixtures/: fixture_registry.json
fixtures/manifests/: plate-hole-default-v1.json
scripts/: run_local_release_gate.ps1
src/materialai_qa/: __init__.py  cli.py  contracts.py  fake_mcp_bridge.py  process_control.py  release_asset.py  reporting.py
tests/: conftest.py  test_abaqus_real.py  test_cli.py  test_contracts.py  test_fake_mcp_bridge.py  test_fixture_registry.py  test_portable_boundaries.py  test_process_control.py  test_release_asset.py  test_reporting.py  test_source_mock_cli.py  test_ui.py
